--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </section>
 
         <section id="projects" class="content-section">
-            <h2 class="section-heading" data-section-number="04">Projects</h2>
+            <h2 class="section-heading" data-section-number="04">Personal Projects</h2>
             <div class="projects-grid">
                 <div class="project-card"><h3>Golang Kubernetes Operator</h3><p>For Ethereum staking to enhance efficiency and automation.</p><a href="https://github.com/jarvis-401" target="_blank" class="project-view-link">View →</a></div>
                 <div class="project-card"><h3>Database Kubernetes Operators</h3><p>Versatile operators for database backup/restore and Vault initialization.</p><a href="https://github.com/jarvis-401" target="_blank" class="project-view-link">View →</a></div>
@@ -150,3 +150,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
